* BUG#9029 Use reduction date as an invoicing period date
* BUG#9043 Ability to apply terminate endorsement on reduced contracts

Version 2.0 - 2018-04-13
* FEA#7959 Add reduction date to reduction wizard preview step
* BUG#7852 Prevent warning loop in eligibility rule
* FEA#7777 Store reduction value to make sure it will never evolve
* OTH#0000 Call reduce method properly in terminate method
* BUG#7682 Cancel invoices after reduction date
* FEA#7616 Add a wizard which allows cancelling a contract's reduction
* FEA#7601 Forbid endorsement cancellation on reduced contracts

Version 1.14 - 2017-11-09
* FEA#6682 Module Creation