@@ -1,3 +1,4 @@
+* BUG#9272 Set contract status to 'active' when reducing a hold contract
 * BUG#9029 Use reduction date as an invoicing period date
 * BUG#9043 Ability to apply terminate endorsement on reduced contracts
 
